Eliminación de datos innecesarios